# HadamardMatrices

./: HadamardCheck.cpp  Hallset.cpp  README.mdС  quadruples.cpp
findHallset/: CMakeLists.txt  Hallset.cpp  NHallset.cpp  setfindmin.cpp
findQuadruples/: CMakeLists.txt  quadruples.cpp  quadruples_transpose.cpp
